--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-SECRET=donkopakarnamuskilhinahinamumkinhai.
-API_KEY=hellobhaisabkaisyhotheekkhanakhakrjana
+CLIENT_ID=961648172076-47aeuhcectrlh5ldmpnigqs09g7c5ggq.apps.googleusercontent.com
+CLIENT_SECRET=g9OwDpO9k0XVfB1i46FjKZwY
+
+
