--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-CLIENT_ID=961648172076-47aeuhcectrlh5ldmpnigqs09g7c5ggq.apps.googleusercontent.com
-CLIENT_SECRET=g9OwDpO9k0XVfB1i46FjKZwY
-
+CLIENT_ID=hidden
+CLIENT_SECRET=hidden
 
